<resources>
    <string name="app_name">ACME</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="repeat_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="user_name_allowed_digits">áéíóúÁÉÍÓÚabcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_</string>
    <string name="client_name_allowed_digits">áéíóúÁÉÍÓÚabcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 </string>
    <string name="username_empty_error">Username should not be empty</string>
    <string name="client_name_empty_error">Client name should not be empty</string>
    <string name="address_empty_error">Address should not be empty</string>
    <string name="date_empty_error">Date should not be empty</string>
    <string name="password_empty_error">Password should not be empty</string>
    <string name="username_short_error">Username should be more than 4 characters</string>
    <string name="client_name_short_error">Client name should be more than 4 characters</string>
    <string name="address_short_error">Address should be more than 4 characters</string>
    <string name="password_short_error">Password should be more than 8 characters</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="sign_up_successful_message">Your account was created successfully. Log in with your profile</string>
    <string name="accept">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_error">Sign up failed</string>
    <string name="sign_up_error_message">There was an error creating your account. Please, try again.</string>
    <string name="sign_in_error">Sign in failed</string>
    <string name="sign_in_error_message">You have entered the wrong user name or password. Try again or Sign up</string>
    <string name="work_ticket">Work Ticket</string>
    <string name="get_directions">Get Directions</string>
    <string name="view_ticket">View Ticket</string>
    <string name="client_name">Client Name</string>
    <string name="address">Address</string>
    <string name="select_date">Select ticket scheduled date</string>
    <string name="select_date_input">Select Scheduled Date</string>
    <string name="select_date_helper">The ticket\'s scheduled date and time</string>
    <string name="phone">Phone Number</string>
    <string name="save">Save</string>
    <string name="notes">Notes</string>
    <string name="reason_for_call">Reason for Call</string>
    <string name="reason_for_call_heading">Reason for Call:</string>
    <string name="new_ticket">New Ticket</string>
    <string name="select_time">Select ticket scheduled time</string>
    <string name="wrong_phone">Write a valid phone number</string>
    <string name="ticket_added">Ticket added successfully</string>
    <string name="ticket_edited">Ticket edited successfully</string>
    <string name="ticket_added_message">Your ticket was added correctly. You can now add another ticket or go back to the dashboard</string>
    <string name="ticket_edited_message">Your ticket was updated correctly.</string>
    <string name="ticket_removed">Ticket removed successfully</string>
    <string name="ticket_removed_message">Your ticket was removed correctly.</string>
    <string name="no_tickets_to_show">There are no tickets yet</string>
    <string name="add_tickets">Add new tickets and you will see them here</string>
    <string name="client_name_invalid">The name should contain only letters</string>
    <string name="menu">Menu</string>
    <string name="ticket_calendar">Due Tickets Calendar</string>
    <string name="sync_calendar">Sync due tickets to your devices calendar</string>
    <string name="sunday_short">SUN</string>
    <string name="monday_short">MON</string>
    <string name="tuesday_short">TUE</string>
    <string name="wednesday_short">WED</string>
    <string name="thrusday_short">THU</string>
    <string name="friday_short">FRI</string>
    <string name="saturday_short">SAT</string>
    <string name="due_tickets">Due Tickets</string>
    <string name="event_title_template">Ticket scheduled for %s</string>
    <string name="address_template">Address: %s</string>
    <string name="sync_error">Sync Error</string>
    <string name="sync_error_message">Your due tickets could not be synced to your device calendar. Make sure your calendar is correctly set up and try agan</string>
    <string name="calendar_permission_denied_explanation">ACME needs permission to access your calendar in order to sync your due tickets</string>
    <string name="allow">Allow</string>
    <string name="not_synced">Not synced</string>
    <string name="no_due_tickets">You have no due tickets</string>
    <string name="sync_sucesssful">Sync Successful</string>
    <string name="sync_sucesssful_message">Your due tickets were added to your device calendar.</string>
    <string name="sync_with_calendar">Sync with device calendar?</string>
    <string name="sync_with_calendar_message">This will add your due tickets to your device calendar. Are you sure you want to sync?</string>
    <string name="remove_ticker">Delete ticket?</string>
    <string name="remove_ticker_message">This will remove your ticket permanently. Are you sure you want to delete it?</string>
    <string name="no_connection">Connection Failed</string>
    <string name="connect_to_internet">Check your internet connection and try again by refreshing this screen</string>
    <string name="permission_location_rationale">Permission is needed to access your location and get directions on the map</string>
    <string name="location_permission_needed">Location permission needed</string>
    <string name="overview">Overview</string>
    <string name="work_details">Work Details</string>
    <string name="purchasing">Purchasing</string>
    <string name="finishing_up">Finishing Up</string>
    <string name="camera" />
    <string name="customer_info">Customer Info:</string>
    <string name="scheduled_for">Scheduled For</string>
    <string name="ticket_id_formatted">Ticket #%d</string>
    <string name="dashboard">Dashboard</string>
    <string name="edit_ticket">Edit Ticket</string>
    <string name="edit_comfirmation">Confirm Edit</string>
    <string name="edit_comfirmation_message">Are you sure you want to edit this ticket?</string>
    <string name="add_comfirmation">Confirm Adding Ticket</string>
    <string name="add_comfirmation_message">Are you sure you want to add this ticket?</string>
    <string name="add_ticket_first">You should add a ticket first</string>
</resources>