<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/legendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/legendText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sunday_short"
        android:textColor="@color/black"
        android:textSize="@dimen/header_day_of_week_text_size" />

    <TextView
        android:id="@+id/legendText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/monday_short"
        android:textColor="@color/black"
        android:textSize="@dimen/header_day_of_week_text_size" />

    <TextView
        android:id="@+id/legendText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tuesday_short"
        android:textColor="@color/black"
        android:textSize="@dimen/header_day_of_week_text_size" />

    <TextView
        android:id="@+id/legendText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wednesday_short"
        android:textColor="@color/black"
        android:textSize="@dimen/header_day_of_week_text_size" />

    <TextView
        android:id="@+id/legendText5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/thrusday_short"
        android:textColor="@color/black"
        android:textSize="@dimen/header_day_of_week_text_size" />

    <TextView
        android:id="@+id/legendText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/friday_short"
        android:textColor="@color/black"
        android:textSize="@dimen/header_day_of_week_text_size" />

    <TextView
        android:id="@+id/legendText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/saturday_short"
        android:textColor="@color/black"
        android:textSize="@dimen/header_day_of_week_text_size" />

</LinearLayout>
