<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_login"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/guideline_top"
    app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ic_app_logo"
        app:layout_constraintDimensionRatio="w,20:7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <!--<TextView
        android:id="@+id/text_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/activity_login_app_name_text_size"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/sfpro_display_regular"
        android:visibility="gone"
        />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_person_outline"
        android:hint="@string/user_name"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textSize="@dimen/activity_login_edit_text_size"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text_input_user_name"
        app:layout_constraintEnd_toEndOf="@id/text_input_user_name"
        app:layout_constraintTop_toBottomOf="@+id/text_input_user_name"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_outline_lock"
        app:errorEnabled="true"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_login_edit_text_size"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/text_input_password"
        app:layout_constraintStart_toStartOf="@id/text_input_user_name"
        app:layout_constraintEnd_toEndOf="@id/text_input_user_name"
        android:textColor="@color/white"
        android:textSize="@dimen/button_login_text_size"
        style="@style/button_login"
        app:backgroundTint="@color/primaryDarkColor"
        />

    <TextView
        android:id="@+id/text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="@id/button_login"
        android:layout_marginTop="@dimen/text_register_margin_top"
        android:textSize="@dimen/text_or_size"
        />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/text_or"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="@id/button_login"
        android:layout_marginTop="@dimen/text_register_margin_top"
        android:textSize="@dimen/text_register_size"
        android:textStyle="bold"
        android:textColor="@color/primaryDarkColor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>