<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_sign_up"
    android:layout_height="wrap_content"
    android:layout_width="0dp"
    app:layout_constraintTop_toBottomOf="@+id/layout_app_bar"
    >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_person_outline"
        android:hint="@string/user_name"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textSize="@dimen/activity_login_edit_text_size"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_text_input_margin_top"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_outline_lock"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/text_input_user_name"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_login_edit_text_size"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_text_input_margin_top"
        android:hint="@string/repeat_password"
        app:startIconDrawable="@drawable/ic_outline_lock"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_login_edit_text_size"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/text_input_repeat_password"
        app:layout_constraintStart_toStartOf="@id/text_input_user_name"
        app:layout_constraintEnd_toEndOf="@id/text_input_user_name"
        android:textColor="@color/white"
        android:textSize="@dimen/button_login_text_size"
        style="@style/button_login"
        app:backgroundTint="@color/primaryColor"
        />


</androidx.constraintlayout.widget.ConstraintLayout>