<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_new_ticket"
    android:layout_height="wrap_content"
    android:layout_width="0dp"
    app:layout_constraintTop_toBottomOf="@+id/layout_main_app_bar"
    >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_client_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_person_outline"
        android:hint="@string/client_name"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:showIn="@layout/layout_activity_login_content"
        app:counterMaxLength="50"
        app:counterEnabled="true"
        android:layout_marginTop="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_client_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:textSize="@dimen/default_edit_text_size"
            android:digits="@string/user_name_allowed_digits"
            android:maxLength="50"
            android:singleLine="true"
            android:imeOptions="actionNext"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_location_on_24"
        android:hint="@string/address"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_client_name"
        tools:showIn="@layout/layout_activity_login_content"
        android:layout_marginTop="@dimen/login_sign_up_general_margin_top"
        app:counterMaxLength="300"
        app:counterEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textSize="@dimen/default_edit_text_size"
            android:maxLength="300"
            android:singleLine="true"
            android:imeOptions="actionNext"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_select_date"
        style="@style/date_autocomplete_layout"
        app:helperText="@string/select_date_helper"
        app:layout_constraintTop_toBottomOf="@+id/text_input_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconDrawable="@drawable/ic_calendar_green"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/login_sign_up_general_margin_top"
        >

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edit_select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_display_regular"
            android:inputType="none"
            android:text="@string/scheduled_date"
            android:textColor="@color/dark_grey"
            tools:ignore="LabelFor"
            android:textSize="@dimen/default_edit_text_size"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
        android:hint="@string/phone"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_select_date"
        app:counterMaxLength="15"
        android:layout_marginTop="@dimen/login_sign_up_general_margin_top"
        app:counterEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:textSize="@dimen/default_edit_text_size"
            android:maxLength="15"
            android:singleLine="true"
            android:imeOptions="actionNext"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/notes"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_phone"
        tools:showIn="@layout/layout_activity_login_content"
        android:layout_marginTop="@dimen/login_sign_up_general_margin_top"
        app:counterMaxLength="500"
        app:counterEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_edit_text_size"
            android:maxLength="500"
            android:minLines="4"
            android:imeOptions="actionNext"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_reasons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/reasons_for_call"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_notes"
        tools:showIn="@layout/layout_activity_login_content"
        android:layout_marginTop="@dimen/login_sign_up_general_margin_top"
        app:counterMaxLength="300"
        app:counterEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_reasons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_edit_text_size"
            android:maxLength="300"
            android:minLines="3"
            android:imeOptions="actionNext"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_sign_up_general_margin_top"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/text_input_reasons"
        app:layout_constraintStart_toStartOf="@id/text_input_client_name"
        app:layout_constraintEnd_toEndOf="@id/text_input_client_name"
        android:textColor="@color/white"
        android:textSize="@dimen/button_login_text_size"
        style="@style/button_login"
        app:backgroundTint="@color/primaryColor"
        android:maxLength="15"
        android:enabled="false"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintTop_toBottomOf="@id/button_save"
        />


</androidx.constraintlayout.widget.ConstraintLayout>